src/main/java/by/maribo/compiler/grammar/MathGrammarParser.java
// Generated from D:/Projects/Java/MathCompiler/grammar\MathGrammar.g4 by ANTLR 4.7
package by.maribo.compiler.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MathGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BEGIN_PROGRAM=1, BEGIN=2, END=3, OPEN_BRACKET=4, CLOSE_BRACKET=5, OPEN_SQUARE_BRACKET=6, 
		CLOSE_SQUARE_BRACKET=7, INT=8, FLOAT=9, DOUBLE=10, PRINT=11, IF=12, ELSE=13, 
		FOR=14, WHILE=15, RETURN=16, FUNCTION=17, SIZE=18, GET=19, SET=20, INDEX_OF=21, 
		PLUS=22, MINUS=23, MULTIPLY=24, DIVIDE=25, ASSIGNMENT=26, RESIDUAL=27, 
		EXPONENTIATION=28, NEGATION=29, EQUAL=30, NON_EQUAL=31, LESS=32, GREATER=33, 
		LESS_OR_EQUAL=34, GREATER_OR_EQUAL=35, COMMA=36, DOT_COMMA=37, SPACE=38, 
		NUMBER=39, NAME=40, LINE=41;
	public static final int
		RULE_mathExpression = 0, RULE_math = 1, RULE_program = 2, RULE_block = 3, 
		RULE_declarationInt = 4, RULE_declarationFloat = 5, RULE_declarationDouble = 6, 
		RULE_print = 7, RULE_inputSignature = 8, RULE_functionCall = 9, RULE_type = 10, 
		RULE_functionSignature = 11, RULE_functionReturn = 12, RULE_functionNonReturn = 13, 
		RULE_blockReturn = 14, RULE_blockNonReturn = 15, RULE_compare = 16, RULE_negationCompare = 17, 
		RULE_ifBlock = 18, RULE_elseBlock = 19, RULE_whileBlock = 20, RULE_expressionInBracket = 21, 
		RULE_expression = 22, RULE_content = 23, RULE_mathVariable = 24;
	public static final String[] ruleNames = {
		"mathExpression", "math", "program", "block", "declarationInt", "declarationFloat", 
		"declarationDouble", "print", "inputSignature", "functionCall", "type", 
		"functionSignature", "functionReturn", "functionNonReturn", "blockReturn", 
		"blockNonReturn", "compare", "negationCompare", "ifBlock", "elseBlock", 
		"whileBlock", "expressionInBracket", "expression", "content", "mathVariable"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'begin'", "'{'", "'}'", "'('", "')'", "'['", "']'", "'int'", "'float'", 
		"'double'", "'print'", "'if'", "'else'", "'for'", "'while'", "'return'", 
		"'function'", "'size'", "'get'", "'set'", "'indexOf'", "'+'", "'-'", "'*'", 
		"'/'", "'='", "'%'", "'^'", "'!'", "'=='", "'!='", "'<'", "'>'", "'<='", 
		"'>='", "','", "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "BEGIN_PROGRAM", "BEGIN", "END", "OPEN_BRACKET", "CLOSE_BRACKET", 
		"OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", "INT", "FLOAT", "DOUBLE", 
		"PRINT", "IF", "ELSE", "FOR", "WHILE", "RETURN", "FUNCTION", "SIZE", "GET", 
		"SET", "INDEX_OF", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "ASSIGNMENT", 
		"RESIDUAL", "EXPONENTIATION", "NEGATION", "EQUAL", "NON_EQUAL", "LESS", 
		"GREATER", "LESS_OR_EQUAL", "GREATER_OR_EQUAL", "COMMA", "DOT_COMMA", 
		"SPACE", "NUMBER", "NAME", "LINE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MathGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MathGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MathExpressionContext extends ParserRuleContext {
		public List<TerminalNode> NUMBER() { return getTokens(MathGrammarParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(MathGrammarParser.NUMBER, i);
		}
		public List<TerminalNode> NAME() { return getTokens(MathGrammarParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(MathGrammarParser.NAME, i);
		}
		public TerminalNode PLUS() { return getToken(MathGrammarParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(MathGrammarParser.MINUS, 0); }
		public TerminalNode MULTIPLY() { return getToken(MathGrammarParser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(MathGrammarParser.DIVIDE, 0); }
		public TerminalNode RESIDUAL() { return getToken(MathGrammarParser.RESIDUAL, 0); }
		public TerminalNode EXPONENTIATION() { return getToken(MathGrammarParser.EXPONENTIATION, 0); }
		public MathExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mathExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).enterMathExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).exitMathExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathGrammarVisitor ) return ((MathGrammarVisitor<? extends T>)visitor).visitMathExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MathExpressionContext mathExpression() throws RecognitionException {
		MathExpressionContext _localctx = new MathExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mathExpression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_la = _input.LA(1);
			if ( !(_la==NUMBER || _la==NAME) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(51);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << MULTIPLY) | (1L << DIVIDE) | (1L << RESIDUAL) | (1L << EXPONENTIATION))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(52);
			_la = _input.LA(1);
			if ( !(_la==NUMBER || _la==NAME) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MathContext extends ParserRuleContext {
		public List<MathVariableContext> mathVariable() {
			return getRuleContexts(MathVariableContext.class);
		}
		public MathVariableContext mathVariable(int i) {
			return getRuleContext(MathVariableContext.class,i);
		}
		public TerminalNode PLUS() { return getToken(MathGrammarParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(MathGrammarParser.MINUS, 0); }
		public TerminalNode MULTIPLY() { return getToken(MathGrammarParser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(MathGrammarParser.DIVIDE, 0); }
		public TerminalNode RESIDUAL() { return getToken(MathGrammarParser.RESIDUAL, 0); }
		public TerminalNode EXPONENTIATION() { return getToken(MathGrammarParser.EXPONENTIATION, 0); }
		public MathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_math; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).enterMath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).exitMath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathGrammarVisitor ) return ((MathGrammarVisitor<? extends T>)visitor).visitMath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MathContext math() throws RecognitionException {
		MathContext _localctx = new MathContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_math);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			mathVariable();
			setState(55);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << MULTIPLY) | (1L << DIVIDE) | (1L << RESIDUAL) | (1L << EXPONENTIATION))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(56);
			mathVariable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode BEGIN_PROGRAM() { return getToken(MathGrammarParser.BEGIN_PROGRAM, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<FunctionReturnContext> functionReturn() {
			return getRuleContexts(FunctionReturnContext.class);
		}
		public FunctionReturnContext functionReturn(int i) {
			return getRuleContext(FunctionReturnContext.class,i);
		}
		public List<FunctionNonReturnContext> functionNonReturn() {
			return getRuleContexts(FunctionNonReturnContext.class);
		}
		public FunctionNonReturnContext functionNonReturn(int i) {
			return getRuleContext(FunctionNonReturnContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathGrammarVisitor ) return ((MathGrammarVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(BEGIN_PROGRAM);
			setState(59);
			block();
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCTION) {
				{
				setState(62);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(60);
					functionReturn();
					}
					break;
				case 2:
					{
					setState(61);
					functionNonReturn();
					}
					break;
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(MathGrammarParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(MathGrammarParser.END, 0); }
		public List<ContentContext> content() {
			return getRuleContexts(ContentContext.class);
		}
		public ContentContext content(int i) {
			return getRuleContext(ContentContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathGrammarVisitor ) return ((MathGrammarVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(BEGIN);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << DOUBLE) | (1L << PRINT) | (1L << IF) | (1L << WHILE) | (1L << NAME))) != 0)) {
				{
				{
				setState(68);
				content();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationIntContext extends ParserRuleContext {
		public TerminalNode DOT_COMMA() { return getToken(MathGrammarParser.DOT_COMMA, 0); }
		public TerminalNode NAME() { return getToken(MathGrammarParser.NAME, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(MathGrammarParser.ASSIGNMENT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode INT() { return getToken(MathGrammarParser.INT, 0); }
		public DeclarationIntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationInt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).enterDeclarationInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).exitDeclarationInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathGrammarVisitor ) return ((MathGrammarVisitor<? extends T>)visitor).visitDeclarationInt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationIntContext declarationInt() throws RecognitionException {
		DeclarationIntContext _localctx = new DeclarationIntContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declarationInt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INT) {
					{
					setState(76);
					match(INT);
					}
				}

				setState(79);
				match(NAME);
				setState(80);
				match(ASSIGNMENT);
				setState(81);
				expression();
				}
				break;
			case 2:
				{
				setState(82);
				match(INT);
				setState(83);
				match(NAME);
				}
				break;
			}
			setState(86);
			match(DOT_COMMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationFloatContext extends ParserRuleContext {
		public TerminalNode DOT_COMMA() { return getToken(MathGrammarParser.DOT_COMMA, 0); }
		public TerminalNode NAME() { return getToken(MathGrammarParser.NAME, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(MathGrammarParser.ASSIGNMENT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode FLOAT() { return getToken(MathGrammarParser.FLOAT, 0); }
		public DeclarationFloatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationFloat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).enterDeclarationFloat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).exitDeclarationFloat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathGrammarVisitor ) return ((MathGrammarVisitor<? extends T>)visitor).visitDeclarationFloat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationFloatContext declarationFloat() throws RecognitionException {
		DeclarationFloatContext _localctx = new DeclarationFloatContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declarationFloat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==FLOAT) {
					{
					setState(88);
					match(FLOAT);
					}
				}

				setState(91);
				match(NAME);
				setState(92);
				match(ASSIGNMENT);
				setState(93);
				expression();
				}
				break;
			case 2:
				{
				setState(94);
				match(FLOAT);
				setState(95);
				match(NAME);
				}
				break;
			}
			setState(98);
			match(DOT_COMMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationDoubleContext extends ParserRuleContext {
		public TerminalNode DOT_COMMA() { return getToken(MathGrammarParser.DOT_COMMA, 0); }
		public TerminalNode NAME() { return getToken(MathGrammarParser.NAME, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(MathGrammarParser.ASSIGNMENT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode DOUBLE() { return getToken(MathGrammarParser.DOUBLE, 0); }
		public DeclarationDoubleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationDouble; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).enterDeclarationDouble(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).exitDeclarationDouble(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathGrammarVisitor ) return ((MathGrammarVisitor<? extends T>)visitor).visitDeclarationDouble(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationDoubleContext declarationDouble() throws RecognitionException {
		DeclarationDoubleContext _localctx = new DeclarationDoubleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declarationDouble);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==DOUBLE) {
					{
					setState(100);
					match(DOUBLE);
					}
				}

				setState(103);
				match(NAME);
				setState(104);
				match(ASSIGNMENT);
				setState(105);
				expression();
				}
				break;
			case 2:
				{
				setState(106);
				match(DOUBLE);
				setState(107);
				match(NAME);
				}
				break;
			}
			setState(110);
			match(DOT_COMMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(MathGrammarParser.PRINT, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(MathGrammarParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(MathGrammarParser.CLOSE_BRACKET, 0); }
		public TerminalNode DOT_COMMA() { return getToken(MathGrammarParser.DOT_COMMA, 0); }
		public TerminalNode NUMBER() { return getToken(MathGrammarParser.NUMBER, 0); }
		public TerminalNode NAME() { return getToken(MathGrammarParser.NAME, 0); }
		public TerminalNode LINE() { return getToken(MathGrammarParser.LINE, 0); }
		public MathContext math() {
			return getRuleContext(MathContext.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).exitPrint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathGrammarVisitor ) return ((MathGrammarVisitor<? extends T>)visitor).visitPrint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_print);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(PRINT);
			setState(113);
			match(OPEN_BRACKET);
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				{
				setState(114);
				match(NUMBER);
				}
				break;
			case 2:
				{
				setState(115);
				match(NAME);
				}
				break;
			case 3:
				{
				setState(116);
				match(LINE);
				}
				break;
			case 4:
				{
				setState(117);
				math();
				}
				break;
			}
			setState(120);
			match(CLOSE_BRACKET);
			setState(121);
			match(DOT_COMMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputSignatureContext extends ParserRuleContext {
		public TerminalNode OPEN_BRACKET() { return getToken(MathGrammarParser.OPEN_BRACKET, 0); }
		public List<TerminalNode> NAME() { return getTokens(MathGrammarParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(MathGrammarParser.NAME, i);
		}
		public TerminalNode CLOSE_BRACKET() { return getToken(MathGrammarParser.CLOSE_BRACKET, 0); }
		public List<TerminalNode> COMMA() { return getTokens(MathGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MathGrammarParser.COMMA, i);
		}
		public InputSignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputSignature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).enterInputSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).exitInputSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathGrammarVisitor ) return ((MathGrammarVisitor<? extends T>)visitor).visitInputSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputSignatureContext inputSignature() throws RecognitionException {
		InputSignatureContext _localctx = new InputSignatureContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_inputSignature);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(OPEN_BRACKET);
			setState(124);
			match(NAME);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(125);
				match(COMMA);
				setState(126);
				match(NAME);
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			match(CLOSE_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(MathGrammarParser.NAME, 0); }
		public TerminalNode OPEN_BRACKET() { return getToken(MathGrammarParser.OPEN_BRACKET, 0); }
		public TerminalNode CLOSE_BRACKET() { return getToken(MathGrammarParser.CLOSE_BRACKET, 0); }
		public TerminalNode DOT_COMMA() { return getToken(MathGrammarParser.DOT_COMMA, 0); }
		public InputSignatureContext inputSignature() {
			return getRuleContext(InputSignatureContext.class,0);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).enterFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MathGrammarListener ) ((MathGrammarListener)listener).exitFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MathGrammarVisitor ) return ((MathGrammarVisitor<? extends T>)visitor).visitFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_functionCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(NAME);
			setState(135);
			match(OPEN_BRACKET);
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPEN_BRACKET) {
				{
				setState(136);
				inputSignature();
				}
			}

			setState(139);
			match(CLOSE_BRACKET);
			setState(140);
			match(DOT_COMMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
